# Cursor-Training4.0

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.cursor/: hooks.json
.cursor/agents/: backend-agent.md  code-review-agent.md  data-analyst-agent.md  data-engineering-agent.md  data-scientist-agent.md  documentation-agent.md  frontend-agent.md  orchestrator-agent.md  qa-agent.md  security-agent.md  technical-planning-agent.md
.cursor/de-orchestration/: README.md
.cursor/hooks/: PAYLOAD_SAMPLES.md  de_dbx_deploy_safety_agent.py  de_dbx_deploy_safety_terminal.py  de_hook_policies.py  de_jira_story_gate_mcp_post.py  de_jira_story_gate_subagent.py  de_orch_one_story_one_pr.py  de_orch_path_lock.py  de_pr_quality_block.py  de_sec_secrets_and_exfil.py  de_sec_shell_terminal.py  de_spark_quality_prompt.md  de_spark_quality_static.py
.cursor/rules/: jira-atlassian-mcp.mdc
.cursor/skills/api-development/: SKILL.md
.cursor/skills/code-review/: SKILL.md
.cursor/skills/feature-decomposition/: SKILL.md
.cursor/skills/pr-description-writing/: SKILL.md
.cursor/skills/pyspark-development/: SKILL.md
.cursor/skills/security-review/: SKILL.md
.cursor/skills/unit-test-generation/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: demo-medallion-ci.yml
demo_medallion/: README.md  __init__.py  ingest.py  paths.py
demo_medallion/data/raw/: orders.json
demo_medallion/tests/: test_ingest.py  test_smoke.py
tests/: test_hook_policies.py
